--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "recharts": "https://aistudiocdn.com/recharts@^3.2.0",
-    "vite": "https://aistudiocdn.com/vite@^7.1.5",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
     "jspdf": "https://aistudiocdn.com/jspdf@^3.0.2",
-    "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^5.0.2"
+    "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^5.0.2",
+    "vite": "https://aistudiocdn.com/vite@^7.1.5",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2"
   }
 }
 </script>
